[gd_scene load_steps=4 format=3 uid="uid://q1niiex70n0c"]

[ext_resource type="Script" uid="uid://bdwmuurr3hfjy" path="res://GameAssets/GameBoard/board_position.gd" id="1_vwcwn"]
[ext_resource type="PackedScene" uid="uid://t16patr1xxpr" path="res://GameAssets/GameBoard/spice_spawn.tscn" id="2_10p7s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vwcwn"]
radius = 2.0

[node name="BoardPosition" type="Marker2D"]
script = ExtResource("1_vwcwn")

[node name="SpiceSpawn" parent="." instance=ExtResource("2_10p7s")]

[node name="BoardPositionCollider" type="Area2D" parent="."]

[node name="BoardPositionColliderShape" type="CollisionShape2D" parent="BoardPositionCollider"]
shape = SubResource("CircleShape2D_vwcwn")

[node name="Button" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "getThisPosition"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
